--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "expo": {
-    "name": "Blank Template",
-    "slug": "quote-app",
+    "name": "Mašnica Daily quote",
+    "slug": "masnica-daily-quote",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -24,7 +23,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "masnica.quotesapi.expo",
+      "supportsTablet": true,
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.masnica.quotes_api",
+      "versionCode": 1
     }
   }
 }
