--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.5",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "react": "~16.9.0",
@@ -16,11 +17,13 @@
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swipe-gestures": "^1.0.4",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
     "react-navigation-drawer": "^2.4.2",
+    "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.2.3",
     "react-navigation-tabs": "^2.8.2",
     "react-redux": "^7.2.0",
