--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-navigation-drawer": "^2.4.2",
     "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.2.3",
+    "react-navigation-switch-transitioner": "^0.1.1",
     "react-navigation-tabs": "^2.8.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
