--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-radio-buttons-group": "^1.0.7",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
