--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-radio-buttons-group": "^1.0.7",
